Bug: 643537 Reviewer: Jay Wootton Comment: In the "what's new" control, if the title is really long it overlaps the refresh controls.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -73,6 +73,11 @@
 	padding-top: 10px;
 }
 
+.activityStreamCtrlHeader2
+{
+	padding-right: 350px;
+}
+
 .activityStreamCtrlHeaderTitle
 {
 	color: #5691a6;
